--- a/example.html
+++ b/example.html
@@ -12,36 +12,36 @@
 
   <link id="theme" href="css/dark.css" rel="stylesheet" />
 
-  <link rel="stylesheet" href="js/libs/codemirror/codemirror.css">
-  <link rel="stylesheet" href="js/libs/codemirror/theme/monokai.css">
-  <script src="js/libs/codemirror/codemirror.js"></script>
-  <script src="js/libs/codemirror/mode/javascript.js"></script>
+  <!-- <link rel="stylesheet" href="js/libs/codemirror/codemirror.css"> -->
+  <!-- <link rel="stylesheet" href="js/libs/codemirror/theme/monokai.css"> -->
+  <!-- <script src="js/libs/codemirror/codemirror.js"></script> -->
+  <!-- <script src="js/libs/codemirror/mode/javascript.js"></script> -->
 
-  <link rel="stylesheet" href="js/libs/codemirror/addon/dialog/dialog.css">
-  <link rel="stylesheet" href="js/libs/codemirror/addon/search/matchesonscrollbar.css">
-  <script src="js/libs/codemirror/addon/dialog/dialog.js"></script>
-  <script src="js/libs/codemirror/addon/search/searchcursor.js"></script>
-  <script src="js/libs/codemirror/addon/search/search.js"></script>
-  <script src="js/libs/codemirror/addon/scroll/annotatescrollbar.js"></script>
-  <script src="js/libs/codemirror/addon/search/matchesonscrollbar.js"></script>
-  <script src="js/libs/codemirror/addon/search/jump-to-line.js"></script>
+  <!-- <link rel="stylesheet" href="js/libs/codemirror/addon/dialog/dialog.css"> -->
+  <!-- <link rel="stylesheet" href="js/libs/codemirror/addon/search/matchesonscrollbar.css"> -->
+  <!-- <script src="js/libs/codemirror/addon/dialog/dialog.js"></script> -->
+  <!-- <script src="js/libs/codemirror/addon/search/searchcursor.js"></script> -->
+  <!-- <script src="js/libs/codemirror/addon/search/search.js"></script> -->
+  <!-- <script src="js/libs/codemirror/addon/scroll/annotatescrollbar.js"></script> -->
+  <!-- <script src="js/libs/codemirror/addon/search/matchesonscrollbar.js"></script> -->
+  <!-- <script src="js/libs/codemirror/addon/search/jump-to-line.js"></script> -->
 
   <script src="js/libs/signals.min.js"></script>
   <script src="js/libs/ui.js"></script>
 
   <script src="js/Editor.js"></script>
-  <script src="js/Code.js"></script>
+  <!-- <script src="js/Code.js"></script> -->
   <script src="js/Config.js"></script>
-  <script src="js/Menubar.js"></script>
-  <script src="js/Menubar.File.js"></script>
-  <script src="js/Menubar.Edit.js"></script>
-  <script src="js/Menubar.Examples.js"></script>
-  <script src="js/Menubar.Help.js"></script>
-  <script src="js/Sidebar.js"></script>
-  <script src="js/Sidebar.Animation.js"></script>
-  <script src="js/Sidebar.Project.js"></script>
-  <script src="js/Sidebar.Settings.js"></script>
-  <script src="js/Viewport.js"></script>
+  <!-- <script src="js/Menubar.js"></script> -->
+  <!-- <script src="js/Menubar.File.js"></script> -->
+  <!-- <script src="js/Menubar.Edit.js"></script> -->
+  <!-- <script src="js/Menubar.Examples.js"></script> -->
+  <!-- <script src="js/Menubar.Help.js"></script> -->
+  <!-- <script src="js/Sidebar.js"></script> -->
+  <!-- <script src="js/Sidebar.Animation.js"></script> -->
+  <!-- <script src="js/Sidebar.Project.js"></script> -->
+  <!-- <script src="js/Sidebar.Settings.js"></script> -->
+  <!-- <script src="js/Viewport.js"></script> -->
   <script src="js/Controls.js"></script>
   <script src="js/Timeline.js"></script>
   <script src="js/Timeline.Animations.js"></script>
