--- a/example.html
+++ b/example.html
@@ -1,29 +1,19 @@
-  <!doctype html>
+<!doctype html>
 <html>
 <head>
   <meta charset="utf-8">
   <title>Video.js Subtitle Editor</title>
 
   <link href="http://vjs.zencdn.net/7.0.0/video-js.css" rel="stylesheet">
-  <link href="css/videojs-transcript.css" title="Example 1" rel="stylesheet">
+  <link href="css/videojs-transcript.css" rel="stylesheet">
+  <link href="css/timeliner.css" rel="stylesheet" />
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
+  
   <script src="http://vjs.zencdn.net/7.0.0/video.js"></script>
-  <script src="js/videojs-transcript.js"></script>
+  <script src="js/transcript.js"></script>
+  <script src="js/timeliner.js"></script>
 
-  <link id="theme" href="css/timeliner.css" rel="stylesheet" />
-
-  <script src="js/libs/signals.min.js"></script>
-  <script src="js/libs/ui.js"></script>
-
-  <script src="js/Editor.js"></script>
-  <script src="js/Config.js"></script>
-  <script src="js/Controls.js"></script>
-  <script src="js/Timeline.js"></script>
-  <script src="js/Timeline.Animations.js"></script>
-  <script src="js/Timeline.Curves.js"></script>
-
-  <script src="js/Frame.js"></script>
-  </head>
+</head>
   <body>
   <div class="video-container">
     <video id="video"
@@ -34,7 +24,6 @@
       <p>
         Your browser doesn't support video. Please <a href="http://browsehappy.com/">upgrade your browser</a> to see the example.
       </p>
-      <!-- <source src="https://www.openbeelden.nl/files/92/104101.ed_hd.mp4" type="video/mp4"> -->
       <source src="https://www.openbeelden.nl/files/92/104105.ed_hd.webm" type="video/webm">
     </video>
   </div>
@@ -43,19 +32,19 @@
   <script>
       var video = videojs('video').ready(function(){
         this.on('loadedmetadata', function(){
+          
           let inputTrack = this.addTextTrack("captions", "English", "en");
           inputTrack.addCue(new VTTCue(2.000, 8.120, "The orange open project movie presents"));
-          inputTrack.addCue(new VTTCue(15.000, 17.951, " At the left we can see..."));
-          inputTrack.addCue(new VTTCue(18.166, 20.083, " At the right we can see the..."));
-          inputTrack.addCue(new VTTCue(20.119, 21.962, " ...the head-snarlers"));
-          inputTrack.addCue(new VTTCue(21.999, 24.368, " Everything is safe. Perfectly safe."));
-          inputTrack.addCue(new VTTCue(24.582, 27.035, " Emo?"));
-          inputTrack.addCue(new VTTCue(28.206, 29.996, " Watch out!"));
-          inputTrack.addCue(new VTTCue(47.037, 48.494, " Are you hurt?"));
-          inputTrack.addCue(new VTTCue(51.994, 53.949, " I don't think so. You?"));
-          inputTrack.addCue(new VTTCue(55.160, 56.985, " I'm Ok."));
+          inputTrack.addCue(new VTTCue(15.000, 17.951, "At the left we can see..."));
+          inputTrack.addCue(new VTTCue(18.166, 20.083, "At the right we can see the..."));
+          inputTrack.addCue(new VTTCue(20.119, 21.962, "...the head-snarlers"));
+          inputTrack.addCue(new VTTCue(21.999, 24.368, "Everything is safe. Perfectly safe."));
+          inputTrack.addCue(new VTTCue(24.582, 27.035, "Emo?"));
+          inputTrack.addCue(new VTTCue(28.206, 29.996, "Watch out!"));
+          inputTrack.addCue(new VTTCue(47.037, 48.494, "Are you hurt?"));
+          inputTrack.addCue(new VTTCue(51.994, 53.949, "I don't think so. You?"));
+          inputTrack.addCue(new VTTCue(55.160, 56.985, "I'm Ok."));
 
-          // fire up the plugin
           var options = {
             // addText: 'TestAdd',
             // deleteText: 'TestDelete',
@@ -67,12 +56,9 @@
 
           let textTrack = transcript.track;
 
-          // console.log(textTrack)
-
           document.querySelector(".transcript").addEventListener("timeInputError", (event) => {
             alert(event.detail)
-          })
-
+          });
         });
       });
   </script>
