Remove unused files

--- a/example.html
+++ b/example.html
@@ -5,7 +5,7 @@
   <title>Video.js Subtitle Editor</title>
 
   <link href="http://vjs.zencdn.net/7.0.0/video-js.css" rel="stylesheet">
-  <link href="css/videojs-transcript.css" rel="stylesheet">
+  <link href="css/transcript.css" rel="stylesheet">
   <link href="css/timeliner.css" rel="stylesheet" />
   <link href="https://stackpath.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet" integrity="sha384-wvfXpqpZZVQGK6TAh5PVlGOfQNHSoD2xbE+QkPxCAFlNEevoEH3Sl0sibVcOQVnN" crossorigin="anonymous">
   
